umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_2-pyrrolidone.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "C#h2#v2" "1" "C#h2#v2" "2" "C#h2#v2" "3" "C#v4" "4" "O#n2#v2" "5" "N#h#n#v2"} :bonds [["0" "1" "1"] ["1" "2" "1"] ["2" "3" "1"] ["3" "4" "2"] ["3" "5" "1"] ["5" "0" "1"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "C#h2#v2" "1" "C#h2#v2" "2" "C#h2#v2" "3" "C#v4" "4" "O#n2#v2" "5" "N#h#n#v2"} :bonds [["0" "1" "1"] ["1" "2" "1"] ["2" "3" "1"] ["3" "4" "2"] ["3" "5" "1"] ["5" "0" "1"]] :charge 0 :spin "#u0 #s1"}}}
