umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_acetaldehyde-hydrazone.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {
    :output {
      :atoms ["C#h3" "C#h" "N#n" "N#h2#n"]
      :bonds [[0 1 :single] [1 2 :double] [2 3 :single]]}
    :success true
    :tie-breaks [0 1 3]}
  :atom-typing-strict {
    :success false
    :tie-breaks []
    :unresolved {
      0 [
        "C#h3#v#d0#t0#a!#m!"
        "C#h2#u#v#d0#t0#a!#m!"
        "C#h#u2#v#d0#t0#a!#m!"
        "C#h#n#v#d0#t0#a!#m!"
        "C#n#u#v#d0#t0#a!#m!"
        "C#u3#v#d0#t0#a!#m!"]
      1 ["C#h#v3#d0#t0#a!#m!" "C#u#v3#d0#t0#a!#m!"]
      3 ["N#h2#n#v#d0#t0#a!#m!" "N#h#n#u#v#d0#t0#a!#m!" "N#n2#v#d0#t0#a!#m!"]}}
  :counts-most-saturated {
    :output {
      :atoms ["C#h3" "C#h" "N#n" "N#h2#n"]
      :bonds [[0 1 :single] [1 2 :double] [2 3 :single]]}
    :success true
    :tie-breaks [0 1 3]}
  :counts-strict {
    :success false
    :tie-breaks []
    :unresolved {
      0 ["C#n#u#v#a!" "C#h#n#v#a!" "C#h2#u#v#a!" "C#h3#v#a!"]
      1 ["C#u#v3#a!" "C#h#v3#a!"]
      3 ["N#n2#v#a!" "N#h#n#u#v#a!" "N#h2#n#v#a!"]}}}
