umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_acetaldehyde-oxime.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms ["C#h3#v" "C#h#v3" "N#n#v3" "O#h#n2#v"] :bonds [[0 1 "1"] [1 2 "2"] [2 3 "1"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms ["C#h3#v" "C#h#v3" "N#n#v3" "O#h#n2#v"] :bonds [[0 1 "1"] [1 2 "2"] [2 3 "1"]] :charge 0 :spin "#u0 #s1"}}}
